Work with favicon.ico

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/11ty/indieweb-avatar#readme",
   "dependencies": {
+    "@11ty/eleventy-cache-assets": "^2.3.0",
     "@11ty/eleventy-img": "^1.0.0-beta.2",
     "@netlify/functions": "^0.7.2",
     "cheerio": "^1.0.0-rc.10",
+    "ico-to-png": "^0.2.1",
     "node-fetch": "^2.6.2"
   }
 }
