Switch to global persistent builders via https://www.netlify.com/blog/2021/10/25/faster-more-reliable-page-loads-with-update-to-on-demand-builders/

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,6 @@ directory = "functions"
 
 [[redirects]]
 from = "/*"
-to = "/.netlify/functions/avatar"
+to = "/.netlify/builders/avatar"
 status = 200
 force = true
