--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/11ty/indieweb-avatar#readme",
   "dependencies": {
-    "@11ty/eleventy-cache-assets": "^2.3.0",
+    "@11ty/eleventy-fetch": "^3.0.0",
     "@11ty/eleventy-img": "^1.0.0-beta.2",
     "@netlify/functions": "^0.7.2",
     "cheerio": "^1.0.0-rc.10",
